Modernize Java language
* Use later language features